[workspace]
members = ["lib", "program", "script"]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "1.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
borsh = "1.5.7"
borsh-derive = "1.5.7"
sha2 = { tag = "patch-sha2-0.10.8-sp1-4.0.0", git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2" }
